update empty lines

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +24,8 @@
 
         /* Header styles */
         header {
-            font-family:
-                background-color: #fff;
+            font-family: 'Montserrat', sans-serif;
+            background-color: #fff;
             padding: 20px 0;
             border-bottom: 1px solid #ccc;
             text-align: center;
