--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         }
 
         h1 {
+            font-family: 'Montserrat', sans-serif;
             font-size: 2em;
             color: #333;
             text-align: center;
