--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Chau</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
         /* Reset some default styles */
         body,
@@ -33,8 +34,8 @@
         }
 
         h1 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 2em;
+            font-family: 'Hammersmith One', sans-serif;
+            font-size: 3em;
             color: #333;
             text-align: center;
         }
@@ -99,7 +100,9 @@
 
 <body>
     <header>
-        <h1>Your Responsive Landing Page</h1>
+        <p style="text-align: left; font-size: 0.8em">uxd @ wlu</p><br>
+        
+        <h1>Emily Chau</h1>
     </header>
 
     <div class="container">
@@ -119,7 +122,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 EC</p>
+        <p style="color: #333; font-size: 0.8em"></p> &copy; 2023 EC
         <p>designed with ♡ on treaty 4 & treaty 14 land
         </p>
     </footer>
