fix footer text

--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
     </div>
 
     <footer>
-        <p style="color: #333; font-size: 0.8em"></p> &copy; 2023 EC
-        <p>designed with ♡ on treaty 4 & treaty 14 land
-        </p>
+        <p style="color: #333; font-size: 0.8em">&copy; 2023 EC<br>designed with ♡ on treaty 4 & treaty 14 land</p> 
     </footer>
 </body>
 
