open link in new tab

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
     <header>
         <li><a href="#laurier" style="position: absolute; left: 20px">ux design @ wlu</a></li>
         <nav style="font-size: 1em; text-align: right">
-            <li><a href="#about">about me</a></li>
-            <li><a href="#portfolio">portfolio</a></li>
+            <li><a target="_blank" rel="noopener" href="#about">about me</a></li>
+            <li><a target="_blank" rel="noopener" href="#portfolio">portfolio</a></li>
             <li><a target="_blank" rel="noopener" href="https://docs.google.com/document/d/e/2PACX-1vQmts-tqGEdmZBJ7mTJRAVITDNtBPJurqzeisPoxWxuA411ZxpwPD8L2sG-di4NScPZl0QnoKBttmvu/pub">resume</a></li>
         </nav>
         <br>
