change resume link to PDF on onedrive

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <nav style="font-size: 1em; text-align: right">
             <li><a target="_blank" rel="noopener" href="#about">about me</a></li>
             <li><a target="_blank" rel="noopener" href="#portfolio">portfolio</a></li>
-            <li><a target="_blank" rel="noopener" href="https://docs.google.com/document/d/e/2PACX-1vQmts-tqGEdmZBJ7mTJRAVITDNtBPJurqzeisPoxWxuA411ZxpwPD8L2sG-di4NScPZl0QnoKBttmvu/pub">resume</a></li>
+            <li><a target="_blank" rel="noopener" href="https://lauriercloud-my.sharepoint.com/:b:/g/personal/chau6054_mylaurier_ca/EQdA-25kNzpPvVR8BW1Dt9gBM60_J85Kj3O433ysn-uZJg?e=7yJXRS">resume</a></li>
         </nav>
         <br>
         <h1>Emily Chau</h1>
