--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         <li><a href="#laurier" style="position: absolute; left: 20px">ux design @ wlu </a></li>
         <nav style="font-size: 1em; text-align: right">
             <li><a target="_blank" rel="noopener" href="#about">about me</a></li>
-            <li><a target="_blank" rel="noopener" href="#portfolio">portfolio</a></li>
-            <li><a target="_blank" rel="noopener" href="https://lauriercloud-my.sharepoint.com/:b:/g/personal/chau6054_mylaurier_ca/EQdA-25kNzpPvVR8BW1Dt9gBM60_J85Kj3O433ysn-uZJg?e=7yJXRS">resume</a></li>
+            <li><a target="_blank" rel="noopener" href="#portfolio">maker lab (ux201)</a></li>
+            <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
         <br>
         <h1>Emily Chau</h1>
