--- a/ux201.html
+++ b/ux201.html
@@ -152,6 +152,9 @@
         </nav>
         <br>
         <h1>ux201 maker lab portfolio</h1>
+        <div>
+
+        </div>
     </header>
     <p></p>
 <footer>
@@ -159,5 +162,4 @@
     <p style="color: #333; font-size: 0.8em; text-align: left; padding-left: 60px; padding-right: 60px">I want to acknowledge the privilege I have to live and study on the territories traditionally occupied and cared for by Indigenous Peoples across Turtle Island. Laurier's campuses are located on the traditional territories of the Anishinabeg, Haudenosaunee and Attawandaron peoples. I am deeply grateful for the opportunity that I have to learn and grow on this land, which continues to be cared for by the First Peoples of Canada. </p>
 </footer>
 </body>
-
 </html>
