--- a/about.html
+++ b/about.html
@@ -7,11 +7,39 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-color: #fff;
+            color: #333;
+            text-align: left;
+        }
+
+        /* Header styles */
+        header {
+            font-family: 'Montserrat', sans-serif;
+            background-color: #fff;
+            padding: 20px 0;
+            border-bottom: 1px solid #ccc;
+            text-align: center;
+        }
+
+        h1 {
+            font-family: 'Hammersmith One', sans-serif;
+            font-size: 3em;
+            color: #333;
+        }
     </style>
 </head>
-
 <body>
     <header>
+        <li><a href="#laurier" style="position: absolute; left: 20px">ux design @ wlu </a></li>
+        <nav style="font-size: 1em; text-align: right">
+            <li><a target="_blank" rel="noopener" href="#about">about me</a></li>
+            <li><a target="_blank" rel="noopener" href="ux201.html">maker lab 1</a></li>
+            <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
+        </nav>
+        <br>
+        <h1>Emily Chau</h1>
     </header>
     <footer>
 
