--- a/about.html
+++ b/about.html
@@ -38,11 +38,9 @@
             <li><a target="_blank" rel="noopener" href="ux201.html">maker lab 1</a></li>
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
-        <br>
-        <h1>Emily Chau</h1>
     </header>
-    <footer>
-
+    <footer>Emily Chau <x-fullyear></x-fullyear>
+    <
     </footer>
 </body>
 </html>
