--- a/ux201.html
+++ b/ux201.html
@@ -81,7 +81,7 @@
         /* Responsive CSS */
         @media (max-width: 768px) {
             h1 {
-                font-size: 1.5em;
+                font-size: 1em;
             }
 
             .container {
@@ -151,7 +151,7 @@
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
         <br>
-        <h1>ux201 maker lab portfolio</h1>
+        <h1>maker lab portfolio</h1>
         <div>
 
         </div>
