--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
     <footer>Emily Chau <x-fullyear></x-fullyear>
-    <
+    <x-landback></x-landback>
     </footer>
 </body>
 </html>
