--- a/about.html
+++ b/about.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
+      /* Reset some default styles */
+      body,
+        h1,
+        p {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Set the font family */
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-color: #fff;
+            color: #333;
+            text-align: left;
+        }
+
+        /* Header styles */
+        header {
+            font-family: 'Montserrat', sans-serif;
+            background-color: #fff;
+            padding: 20px 0;
+            border-bottom: 1px solid #ccc;
+            text-align: center;
+        }
+
+        h1 {
+            font-family: 'Hammersmith One', sans-serif;
+            font-size: 3em;
+            color: #333;
+        }
+
         /* Main content container */
         .container {
             max-width: 800px;
