center and set font size to 1em

--- a/about.html
+++ b/about.html
@@ -34,8 +34,9 @@
 
         h1 {
             font-family: 'Hammersmith One', sans-serif;
-            font-size: 3em;
+            font-size: 1em;
             color: #333;
+            text-align: center;
         }
 
         /* Main content container */
