--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             font-size: 1.2em;
             color: #777;
             text-align: left;
+            padding-left, padding-right: 30px;
+            padding-top, padding-bottom: 5px;
         }
 
         /* Footer */
