--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
 
         p {
-            font-size: 1.2em;
+            font-size: 0.8em;
             color: #777;
             text-align: left;
             padding-left, padding-right: 30px;
@@ -101,7 +101,9 @@
             }
 
             p {
-                font-size: 1em;
+                font-size: 0.8em;
+                padding-left, padding-right: 30px;
+            padding-top, padding-bottom: 5px;
             }
         }
         /* Basic styling for the menu */
