--- a/about.html
+++ b/about.html
@@ -68,6 +68,8 @@
             font-size: 0.8em;
             color: #777;
             text-align: left;
+            padding-left, padding-right: 30px;
+            padding-top, padding-bottom: 5px;
         }
 
         /* Footer */
@@ -100,6 +102,8 @@
 
             p {
                 font-size: 0.8em;
+                padding-left, padding-right: 30px;
+                padding-top, padding-bottom: 5px;
             }
         }
         /* Basic styling for the menu */
