add padding for the body

--- a/about.html
+++ b/about.html
@@ -7,20 +7,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
-      /* Reset some default styles */
-      body,
-        h1,
-        p {
-            margin: 0;
-            padding: 0;
-        }
-
         /* Set the font family */
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #fff;
             color: #333;
             text-align: left;
+            padding-left, padding-right: 30px;
+            padding-top, padding-bottom: 5px;
         }
 
         /* Header styles */
