--- a/about.html
+++ b/about.html
@@ -13,8 +13,11 @@
             background-color: #fff;
             color: #333;
             text-align: left;
+        }
+        main{
             padding-left, padding-right: 30px;
             padding-top, padding-bottom: 5px;
+            font-size: 1em;
         }
 
         /* Header styles */
@@ -149,14 +152,14 @@
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
     </header>
-    <h1>who's behind the designs?</h1>
-    <h2>Emily (aka EC or @uxemilyy)</h2>
-
-    <p>all lowercase text is an <em>aesthetic choice</em>, not a grammatical mistake – anyways in all seriousness:</p>
-    <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. A story: While teaching my 嫲嫲 maa4 maa4 (grandma) how to use the family iPad, I saw the impact of good and intuitive design. Without knowing the language or how to use a tablet, she got the hang of it. Before I could switch the language to Traditional Chinese, she found the camera app and even took some pictures without my help. This stuck with me, and without consciously knowing it, this kickstarted my studying design.</p>
-    <p>I am also cautious and critical throughout the design process. The ”what-ifs” and contingency planning helps to propel-forth all the ideas leading up to the ideation phase. All in moderation of course, it helps to rein in the desire to immediately jump towards solutions. </p>
-    <p>And of course, I design for functionality and positive impact. A good design job is a silent background player, not in it for the accolades or acknowledgements. I’d like to think of these as my forefront goals as a UX/UI Designer.</p>
-    
+    <main>
+        <h1>who's behind the designs?</h1>
+        <h2>Emily (aka EC or @uxemilyy)</h2>
+        <p>all lowercase text is an <em>aesthetic choice</em>, not a grammatical mistake – anyways in all seriousness:</p>
+        <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. A story: While teaching my 嫲嫲 maa4 maa4 (grandma) how to use the family iPad, I saw the impact of good and intuitive design. Without knowing the language or how to use a tablet, she got the hang of it. Before I could switch the language to Traditional Chinese, she found the camera app and even took some pictures without my help. This stuck with me, and without consciously knowing it, this kickstarted my studying design.</p>
+        <p>I am also cautious and critical throughout the design process. The ”what-ifs” and contingency planning helps to propel-forth all the ideas leading up to the ideation phase. All in moderation of course, it helps to rein in the desire to immediately jump towards solutions. </p>
+        <p>And of course, I design for functionality and positive impact. A good design job is a silent background player, not in it for the accolades or acknowledgements. I’d like to think of these as my forefront goals as a UX/UI Designer.</p>
+    </main>
     <footer>Emily Chau <x-fullyear></x-fullyear>
     <x-landback></x-landback>
     </footer>
