--- a/about.html
+++ b/about.html
@@ -156,8 +156,9 @@
         <p>I am also cautious and critical throughout the design process. The ”what-ifs” and contingency planning helps to propel-forth all the ideas leading up to the ideation phase. All in moderation of course, it helps to rein in the desire to immediately jump towards solutions. </p>
         <p>And of course, I design for functionality and positive impact. A good design job is a silent background player, not in it for the accolades or acknowledgements. I’d like to think of these as my forefront goals as a UX/UI Designer.</p>
     </main>
-    <footer>Emily Chau <x-fullyear></x-fullyear>
-    <x-landback></x-landback>
+    <footer>
+        <p style="color: #333; text-align: center; font-size: 0.8em">&copy; <x-year></x-year> EC<br>designed with ♡ on treaty 4 & treaty 14 land</p> <br>
+        <p style="color: #333; font-size: 0.8em; text-align: left; padding-left: 60px; padding-right: 60px">I want to acknowledge the privilege I have to live and study on the territories traditionally occupied and cared for by Indigenous Peoples across Turtle Island. Laurier's campuses are located on the traditional territories of the Anishinabeg, Haudenosaunee and Attawandaron peoples. I am deeply grateful for the opportunity that I have to learn and grow on this land, which continues to be cared for by the First Peoples of Canada. </p>
     </footer>
 </body>
 </html>
