--- a/about.html
+++ b/about.html
@@ -146,8 +146,8 @@
     <header>
         <li><a href="#laurier" style="position: absolute; left: 20px">ux design @ wlu </a></li>
         <nav style="font-size: 1em; text-align: right">
-            <li><a href="about.html">about me</a></li>
-            <li><a href="#ux201"><strong>maker lab 1</strong></a></li>
+            <li><a href="#about"><strong>about</strong></a></li>
+            <li><a href="ux201.html">maker lab 1</a></li>
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
         <br>
