add padding for main section

--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
         }
 
         /* Set the font family */
+        main{
+            padding: 30px;
+        }
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #fff;
