add padding and alignment

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
         /* Set the font family */
         main{
-            padding: 30px;
+            padding: 60px;
         }
         body {
             font-family: 'Montserrat', sans-serif;
@@ -40,6 +40,7 @@
             font-family: 'Hammersmith One', sans-serif;
             font-size: 3em;
             color: #333;
+            text-align: center;
         }
 
         /* Main content container */
