make two columns

--- a/ux201.html
+++ b/ux201.html
@@ -152,8 +152,10 @@
         </nav>
         <br>
         <h1>maker lab portfolio</h1>
-        <div>
-        </div>
+        <div class="row">
+            <div class="column">Group Maker Lab 1</div>
+            <div class="column">Group Maker Lab 2</div>
+          </div>
     </header>
     <p></p>
 <footer>
