add column and now styling

--- a/ux201.html
+++ b/ux201.html
@@ -120,6 +120,15 @@
             text-decoration: none;
             color: #333;
         }
+        .column {
+            float: left;
+        }
+        .left {
+            width: 25%;
+        }
+        .right {
+            width: 75%;
+        }
         .button {
             display: inline;
             text-align: center;
