update to css flexbox

--- a/ux201.html
+++ b/ux201.html
@@ -120,14 +120,11 @@
             text-decoration: none;
             color: #333;
         }
+        .row {
+            display: flex;
+        }
         .column {
-            float: left;
-        }
-        .left {
-            width: 50%;
-        }
-        .right {
-            width: 50%;
+            flex: 50%;
         }
         .button {
             display: inline;
