--- a/ux201.html
+++ b/ux201.html
@@ -159,8 +159,14 @@
         <br>
         <h1>maker lab portfolio</h1>
         <div class="row">
-            <div class="column">Group Maker Lab 1</div>
-            <div class="column">Group Maker Lab 2</div>
+            <div class="column">Group Maker Project 1
+                <div class="img"><img src="GMP1.jpg" width="250px" alt="Prototype of the first GLOW box presented in the Group Maker Project (GMP) 1">
+                </div>
+            </div>
+
+            <div class="column">Group Maker Project 2
+
+            </div>
           </div>
     </header>
     <p></p>
