add padding after h1

--- a/ux201.html
+++ b/ux201.html
@@ -37,6 +37,7 @@
             font-family: 'Hammersmith One', sans-serif;
             font-size: 3em;
             color: #333;
+            padding-bottom: 25px;
         }
 
         /* Main content container */
