--- a/about.html
+++ b/about.html
@@ -132,6 +132,16 @@
             text-decoration: none;
             color: #333;
         }
+        .column {
+            float: left;
+        }
+        .col-left {
+        width: 25%;
+        }
+
+        .col-right {
+        width: 75%;
+        }
         .button {
             display: inline;
             text-align: center;
@@ -168,10 +178,10 @@
         <h1>who's behind the designs?</h1>
         <h2>Emily (aka EC, @uxemilyy)</h2>
         <div class="row">
-            <div class="column">
+            <div class="col-left">
                 <div class="img"><img src="headshot.png" width="100px" alt="Headshot picture of EC">
             </div>
-            <div class="column">
+            <div class="col-right">
                 <p>Emily's current interests are in social media culture and its intersection with accessibility and design. Some of her skills include an impressive working memory for bubble tea orders, and curation of music from the local Toronto indie-punk scene – to a varying degree of usefulness.</p><br />
                 <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. 
                 A story: While teaching my 嫲嫲 maa4 maa4 (grandma) how to use the family iPad, I saw the impact of good and intuitive design. Without knowing the language or how to use a tablet, she got the hang of it. Before I could switch the language to Traditional Chinese, she found the camera app and even took some pictures without my help. This stuck with me, and without consciously knowing it, this kickstarted my studying design.</p><br />
