--- a/about.html
+++ b/about.html
@@ -132,14 +132,12 @@
             text-decoration: none;
             color: #333;
         }
-        .column {
-            float: left;
-        }
-        .col-left {
+        #col-left {
         width: 25%;
+        float: left;
         }
 
-        .col-right {
+        #col-right {
         width: 75%;
         }
         .button {
