--- a/about.html
+++ b/about.html
@@ -133,12 +133,13 @@
             color: #333;
         }
         #col-left {
-        width: 25%;
+        width: 20%;
         float: left;
         }
 
         #col-right {
-        width: 75%;
+        width: 80%;
+        float: right;
         }
         .button {
             display: inline;
