fix column spacing

--- a/about.html
+++ b/about.html
@@ -133,13 +133,13 @@
             color: #333;
         }
         #col-left {
-        width: 20%;
+        width: 40%;
         float: left;
 
         }
 
         #col-right {
-        width: 80%;
+        width: 60%;
         float: right;
         }
         .button {
@@ -170,8 +170,7 @@
     <main>
         <h1>who's behind the designs?</h1>
         <h2>Emily (aka EC, @uxemilyy)</h2>
-        <div class="col-left">
-            <img src="headshot.png" width="200px" alt="Headshot picture of EC"></div>   
+        <div class="col-left"><img src="headshot.png" width="200px" alt="Headshot picture of EC"></div>   
         <div class="col-right">
             <p>Emily's current interests are in social media culture and its intersection with accessibility and design. Some of her skills include an impressive working memory for bubble tea orders, and curation of music from the local Toronto indie-punk scene – to a varying degree of usefulness.</p><br />
             <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. 
