--- a/about.html
+++ b/about.html
@@ -132,8 +132,8 @@
             text-decoration: none;
             color: #333;
         }
-        .column-of-all-columns {
-            float: left;
+        .row {
+            display: flex;
         }
         #col-left {
         width: 40%;
@@ -173,7 +173,7 @@
     <main>
         <h1>who's behind the designs?</h1>
         <h2>Emily (aka EC, @uxemilyy)</h2>
-        <div class="column-of-all-columns">
+        <div class="row">
             <div class="col-left"><img src="headshot.png" width="200px" alt="Headshot picture of EC"></div>   
             <div class="col-right"><br>
                 <p>Emily's current interests are in social media culture and its intersection with accessibility and design. Some of her skills include an impressive working memory for bubble tea orders, and curation of music from the local Toronto indie-punk scene – to a varying degree of usefulness.</p><br />
