--- a/about.html
+++ b/about.html
@@ -136,13 +136,14 @@
             display: flex;
         }
         #col-left {
-        width: 40%;
+        width: 30%;
         float: left;
+        padding-right: 20px;
 
         }
 
         #col-right {
-        width: 60%;
+        width: 70%;
         float: right;
         }
         .button {
