add column padding

--- a/about.html
+++ b/about.html
@@ -145,6 +145,8 @@
         #col-right {
         width: 70%;
         float: right;
+        padding-left: 20px;
+        
         }
         .button {
             display: inline;
