add padding to img

--- a/about.html
+++ b/about.html
@@ -160,6 +160,14 @@
             left: 50%;
             transform: translate(-50%, 950%);
         }
+        .img {
+            display: block;
+            margin: auto;
+            text-align: center;
+            font-size: 10px;
+            max-width: 365px;
+            padding-right: 20px;
+        }
     </style>
 </head>
 <body>
