add margin of 10px

--- a/about.html
+++ b/about.html
@@ -162,11 +162,10 @@
         }
         .img {
             display: block;
-            margin: auto;
+            margin: 10px;
             text-align: center;
             font-size: 10px;
             max-width: 365px;
-            padding-right: 20px;
         }
     </style>
 </head>
