--- a/about.html
+++ b/about.html
@@ -138,13 +138,13 @@
         #col-left {
         width: 40%;
         float: left;
-        padding-right: 20px;
+        margin: 20px;
 
         }
         #col-right {
         width: 60%;
         float: right;
-        padding-left: 40px;
+        margin: 20px;
 
         }
         .button {
