add margin padding

--- a/about.html
+++ b/about.html
@@ -134,6 +134,7 @@
         }
         .row {
             display: flex;
+            margin: 20px;
         }
         #col-left {
         width: 40%;
