--- a/about.html
+++ b/about.html
@@ -178,12 +178,14 @@
     <main>
         <h1>who's behind the designs?</h1>
         <h2>Emily (aka EC, @uxemilyy)</h2>
-        <div class="col-left"><img src="headshot.png" width="200px" alt="Headshot picture of EC"></div>   
-        <div class="col-right">
-            <p>Emily's current interests are in social media culture and its intersection with accessibility and design. Some of her skills include an impressive working memory for bubble tea orders, and curation of music from the local Toronto indie-punk scene – to a varying degree of usefulness.</p><br />
-            <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. 
-            A story: While teaching my 嫲嫲 maa4 maa4 (grandma) how to use the family iPad, I saw the impact of good and intuitive design. Without knowing the language or how to use a tablet, she got the hang of it. Before I could switch the language to Traditional Chinese, she found the camera app and even took some pictures without my help. This stuck with me, and without consciously knowing it, this kickstarted my studying design.</p><br />
-            <p>I am also cautious and critical throughout the design process. The ”what-ifs” and contingency planning helps to propel-forth all the ideas leading up to the ideation phase. All in moderation of course, it helps to rein in the desire to immediately jump towards solutions. And of course, I design for functionality and positive impact. A good design job is a silent background player, not in it for the accolades or acknowledgements. I’d like to think of these as my forefront goals as a UX/UI Designer.</p> <br />
+        <div class="row">
+            <div class="col-left"><img src="headshot.png" width="200px" alt="Headshot picture of EC"></div>   
+            <div class="col-right">
+                <p>Emily's current interests are in social media culture and its intersection with accessibility and design. Some of her skills include an impressive working memory for bubble tea orders, and curation of music from the local Toronto indie-punk scene – to a varying degree of usefulness.</p><br />
+                <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. 
+                A story: While teaching my 嫲嫲 maa4 maa4 (grandma) how to use the family iPad, I saw the impact of good and intuitive design. Without knowing the language or how to use a tablet, she got the hang of it. Before I could switch the language to Traditional Chinese, she found the camera app and even took some pictures without my help. This stuck with me, and without consciously knowing it, this kickstarted my studying design.</p><br />
+                <p>I am also cautious and critical throughout the design process. The ”what-ifs” and contingency planning helps to propel-forth all the ideas leading up to the ideation phase. All in moderation of course, it helps to rein in the desire to immediately jump towards solutions. And of course, I design for functionality and positive impact. A good design job is a silent background player, not in it for the accolades or acknowledgements. I’d like to think of these as my forefront goals as a UX/UI Designer.</p> <br />
+            </div>
         </div>
     </main>
 <footer>
