add in column padding

--- a/about.html
+++ b/about.html
@@ -136,15 +136,18 @@
         .row{
             display: flex;
         }
-        
+
         #col-left {
         width: 40%;
         float: left;
+        padding: 10px;
 
         }
         #col-right {
         width: 60%;
         float: right;
+        padding: 10px;
+        
         }
         .button {
             display: inline;
