--- a/about.html
+++ b/about.html
@@ -59,11 +59,6 @@
             padding-bottom: 70px;
             text-align: left;
         }
-        .poster {
-            width: 306px;
-            height: 396px;
-            background-color: #EB8738;
-}
 
         /* Call to action section */
         .cta {
@@ -135,6 +130,7 @@
 
         .row{
             display: flex;
+            padding: 20px;
         }
 
         #col-left {
@@ -147,7 +143,7 @@
         width: 60%;
         float: right;
         padding: 10px;
-        
+
         }
         .button {
             display: inline;
