specify the padding sides

--- a/about.html
+++ b/about.html
@@ -136,13 +136,13 @@
         #col-left {
         width: 40%;
         float: left;
-        padding: 10px;
+        padding-right: 10px;
 
         }
         #col-right {
         width: 60%;
         float: right;
-        padding: 10px;
+        padding-left: 10px;
 
         }
         .button {
