create centre column

--- a/about.html
+++ b/about.html
@@ -134,10 +134,14 @@
         }
 
         #col-left {
-        width: 40%;
+        width: 30%;
         float: left;
         padding-right: 10px;
 
+        }
+        #col-centre {
+            width: 10%;
+            float: center;
         }
         #col-right {
         width: 60%;
