add center column

--- a/about.html
+++ b/about.html
@@ -142,6 +142,7 @@
         #col-centre {
             width: 10%;
             float: center;
+            padding-left padding right: 10px;
         }
         #col-right {
         width: 60%;
