--- a/about.html
+++ b/about.html
@@ -139,9 +139,9 @@
         padding-right: 10px;
 
         }
-        #col-centre {
-            width: 20px;
-            float: center;
+        .vl {
+            border-left: 3px solid grey;
+            height: 300px;
         }
         #col-right {
         width: 60%;
@@ -179,7 +179,7 @@
         <h2>Emily (aka EC, @uxemilyy)</h2>
         <div class="row">
         <div class="col-left"><img src="headshot.png" width="200px" alt="Headshot picture of EC"></div>  
-        <div class="col-centre"></div> 
+        <div class="vl"></div> 
         <div class="col-right">
             <p>Emily's current interests are in social media culture and its intersection with accessibility and design. Some of her skills include an impressive working memory for bubble tea orders, and curation of music from the local Toronto indie-punk scene – to a varying degree of usefulness.</p><br />
             <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. 
