--- a/about.html
+++ b/about.html
@@ -142,6 +142,7 @@
         .vl {
             border-left: 3px solid grey;
             height: 300px;
+            padding-left, padding-right: 10px;
         }
         #col-right {
         width: 60%;
