--- a/about.html
+++ b/about.html
@@ -137,14 +137,16 @@
         width: 30%;
         float: left;
         padding-right: 10px;
-
         }
+
         .vl {
             width: 20%;
-            padding-left, padding-right: 10px;
+            padding-left: 10px;
             border-left: 3px solid grey;
             height: 250px;
+            padding-right: 10px;
         }
+        
         #col-right {
         width: 50%;
         float: right;
