refer to custom elements

--- a/about.html
+++ b/about.html
@@ -193,7 +193,9 @@
         </div>
     </main>
 <footer>
-    
+    &copy; <x-fullyear></x-fullyear> EC
+    <x-footer></x-footer>
+    <x-landback></x-landback>
 </footer>
 </body>
 </html>
