update footer styling

--- a/about.html
+++ b/about.html
@@ -80,9 +80,10 @@
         /* Footer */
         footer {
             background-color: #F2DFD7;
-            color: #fff;
-            padding: 30px;
-            text-align: left
+            color: black;
+            text-align: center;
+            padding-left: 60px; padding-right: 60px
+
         }
 
         /* Responsive CSS */
