--- a/about.html
+++ b/about.html
@@ -194,9 +194,10 @@
         </div>
     </main>
 <footer>
-    &copy; <x-fullyear></x-fullyear> EC
+    &copy; Emily Chau <x-fullyear></x-fullyear>
     <x-footer></x-footer>
     <x-landback></x-landback>
+    <script src="custom.js"></script>
 </footer>
 </body>
 </html>
