add line breaks

--- a/about.html
+++ b/about.html
@@ -195,8 +195,8 @@
     </main>
 <footer>
     &copy; Emily Chau <x-fullyear></x-fullyear>
-    <x-footer></x-footer>
-    <x-landback></x-landback>
+    <br><x-footer></x-footer>
+    <br><x-landback></x-landback>
     <script src="custom.js"></script>
 </footer>
 </body>
