fix padding in footer

--- a/about.html
+++ b/about.html
@@ -82,7 +82,9 @@
             background-color: #F2DFD7;
             color: black;
             text-align: center;
-            padding-left: 60px; padding-right: 60px
+            padding-left padding-right: 60px;
+            font-size: 0.8em;
+            padding-top padding-bottom: 20px;
 
         }
 
