add margin in footer

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             text-align: center;
             padding-left padding-right: 60px;
             font-size: 0.8em;
-            padding-top padding-bottom: 20px;
+            margin: 30px;
 
         }
 
