create two new elements

--- a/about.html
+++ b/about.html
@@ -80,11 +80,11 @@
         /* Footer */
         footer {
             background-color: #F2DFD7;
+            padding-top padding-bottom: 20px;
+            padding-left padding-right: 30px;
             color: black;
             text-align: center;
-            padding-left padding-right: 60px;
             font-size: 0.8em;
-            margin: 30px;
 
         }
 
