add new custom elements

--- a/about.html
+++ b/about.html
@@ -197,8 +197,8 @@
     </main>
 <footer>
     &copy; Emily Chau <x-fullyear></x-fullyear>
-    <br><x-footer></x-footer>
-    <br><x-landback></x-landback>
+    <br><x-formatline><x-footer></x-footer></x-formatline>
+    <br><x-formatpara><x-landback></x-landback></x-formatpara>
     <script src="custom.js"></script>
 </footer>
 </body>
